Support Jakarta servlet API for Tomcat 10 (#29)