@@ -1,18 +1,19 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'checkstyle'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.johnrengelman.shadow'
+plugins {
+    id 'java'
+    id 'idea'
+    id 'eclipse'
+    id 'checkstyle'
+    id 'jacoco'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
+}
 
 def projectName = 'islandora-syn'
-def projectVersion = '1.1.2-SNAPSHOT'
+def projectVersion = '2.0.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
-def tomcatVersion = '8.0.28'
+def tomcatVersion = '10.1.42'
 
 checkstyle {
     configFile = rootProject.file('gradle/checkstyle/checkstyle.xml')
@@ -24,41 +25,38 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.auth0', name: 'java-jwt', version:'3.1.0'
-    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version:'1.56'
+    implementation group: 'com.auth0', name: 'java-jwt', version:'3.1.0'
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version:'1.56'
     compileOnly group: 'org.apache.tomcat', name: 'tomcat-catalina', version:tomcatVersion
     compileOnly group: 'org.apache.tomcat', name: 'tomcat-coyote', version:tomcatVersion
 
-    testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.7.14'
-    testCompile group: 'org.apache.tomcat', name: 'tomcat-catalina', version:tomcatVersion
-    testCompile group: 'org.apache.tomcat', name: 'tomcat-coyote', version:tomcatVersion
+    testImplementation group: 'junit', name: 'junit', version:'4.12'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version:'5.12.0'
+    testImplementation group: 'org.apache.tomcat', name: 'tomcat-catalina', version:tomcatVersion
+    testImplementation group: 'org.apache.tomcat', name: 'tomcat-coyote', version:tomcatVersion
+}
+
+test {
+    // Mockito's inline mock maker self-attaches a Byte Buddy agent to the test JVM.
+    // JDK 21 disables self-attachment by default, so enable it explicitly.
+    jvmArgs '-Djdk.attach.allowAttachSelf=true', '-XX:+EnableDynamicAgentLoading'
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled false
-    }
-}
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        xml.required = true
+        html.required = false
     }
 }
 
 jar {
-    baseName = projectName
-    version = projectVersion
+    archiveBaseName = projectName
+    archiveVersion = projectVersion
 }
 
 shadowJar {
-    baseName = projectName
-    version = projectVersion
+    archiveBaseName = projectName
+    archiveVersion = projectVersion
 }
 
 assemble.dependsOn(shadowJar);
